Chest X-Ray COVID-19 Classifier

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Chest X-Ray COVID-19 Classifier</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of <strong>COVID-19+</strong> COVID-19- <strong> cases
     </p>
     <div class='content'>
       <div class='no-display'>
@@ -21,7 +20,7 @@
                accept='image/*'
                onchange='showPicked(this)'>
       </div>
-      <button class='choose-file-button' type='button' onclick='showPicker()'>Select Image</button>
+      <button class='choose-file-button' type='button' onclick='showPicker()'>Select Chest X-Ray Image</button>
       <div class='upload-label'>
         <label id='upload-label'>No file chosen</label>
       </div>
